--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 /* Flex Part */
 .wrapper, html, body{
 
-    height: 100%;
+    /* height: 100%; */
     margin: 0px;
 }
 
@@ -19,7 +19,7 @@
 }
 .header.flexy, .footer.flexy{
     flex:0 1 auto;
-    height: 70px;
+    height: 80px;
     display: flex;
     justify-content: space-around;
 }
@@ -44,6 +44,7 @@
     font-weight: bolder;
     flex: auto;
     margin-left: 10%;
+    align-self: center;
 }
 .header ul{
     list-style-type: none;
@@ -58,4 +59,17 @@
 }
 *{
     font-family: "roboto";
+}
+
+a{
+    color: #e5e7eB;
+    text-decoration: none;
+}
+
+.hero, .quote, .signup, .random{
+    height: 400px;
+    flex: 1 1 auto;
+}
+.signup.flexy{
+    height: 300px;
 }
